--- a/resources/locale/ru/LC_MESSAGES/insteadman.po
+++ b/resources/locale/ru/LC_MESSAGES/insteadman.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: insteadman 3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-09 19:47+0300\n"
+"POT-Creation-Date: 2018-06-09 22:42+0300\n"
 "PO-Revision-Date: 2018-06-09 19:47+0300\n"
 "Last-Translator:  <jhekasoft@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: resources/gtk/settings.glade:621
+#: resources/gtk/settings.glade:621 gtk/main.go:134
 msgid "About"
 msgstr "О программе"
 
@@ -50,7 +50,7 @@ msgstr "Очистить"
 msgid "Clear filter"
 msgstr "Очистить фильтр"
 
-#: resources/gtk/settings.glade:646
+#: resources/gtk/settings.glade:646 gtk/ui/error.go:24
 msgid "Close"
 msgstr "Закрыть"
 
@@ -86,7 +86,7 @@ msgstr "InsteadMan"
 msgid "Lang"
 msgstr "Язык"
 
-#: resources/gtk/main.glade:494
+#: resources/gtk/main.glade:494 gtk/functions.go:101
 msgid "Language"
 msgstr "Язык"
 
@@ -134,7 +134,7 @@ msgstr "Репо"
 msgid "Repositories"
 msgstr "Репозитории"
 
-#: resources/gtk/main.glade:75 resources/gtk/main.glade:471
+#: resources/gtk/main.glade:75 resources/gtk/main.glade:471 gtk/functions.go:96
 msgid "Repository"
 msgstr "Репозиторий"
 
@@ -156,7 +156,7 @@ msgstr "Настройки..."
 
 #: resources/gtk/main.glade:271
 msgid "Show only installed games"
-msgstr "Показывать только установленный игры"
+msgstr "Показывать только установленные игры"
 
 #: resources/gtk/main.glade:94
 msgid "Sidebar"
@@ -197,3 +197,92 @@ msgstr "Сайт:"
 #: resources/gtk/main.glade:267
 msgid "installed"
 msgstr "установлено"
+
+#: gtk/functions.go:54
+#, c-format
+msgid "%s Installing..."
+msgstr "%s Установка..."
+
+#: gtk/ui/error.go:23
+msgid "InsteadMan error"
+msgstr "InsteadMan ошибка"
+
+#: gtk/main.go:388
+#, c-format
+msgid "%s Removing..."
+msgstr "%s Удаление..."
+
+#: gtk/ui/settings.go:287
+msgid "Choose INSTEAD"
+msgstr "Выберите INSTEAD"
+
+#: gtk/ui/settings.go:315
+msgid "INSTEAD has detected!"
+msgstr "INSTEAD найден!"
+
+#: gtk/ui/settings.go:342
+msgid "INSTEAD built-in check failed!"
+msgstr "Встроенный INSTEAD не прошёл проверку!"
+
+# c-format
+#: gtk/ui/settings.go:348
+#, c-format
+msgid "INSTEAD %s has found!"
+msgstr "INSTEAD %s найден."
+
+#: gtk/functions.go:20 gtk/functions.go:35 gtk/functions.go:225
+msgid "INSTEAD has not found. Please add INSTEAD in the Settings."
+msgstr "INSTEAD не найден. Пожалуйста настройте INSTEAD в Настройках."
+
+#: gtk/functions.go:40
+msgid "No installing. No game selected."
+msgstr "Не удалось установить. Игра не выбрана."
+
+#: gtk/functions.go:74
+#, c-format
+msgid "Game hasn't installed (%s). Please check INSTEAD in the Settings."
+msgstr "Игра не установлена (%s). Пожалуйста, проверьте INSTEAD в Настройках."
+
+#: gtk/ui/settings.go:288
+msgid "Open"
+msgstr "Открыть"
+
+#: gtk/ui/settings.go:318
+msgid "INSTEAD hasn't detected!"
+msgstr "INSTEAD не найден!"
+
+#: gtk/functions.go:25
+msgid "No running. No game selected."
+msgstr "Не удалось запустить игру. Игра не выбрана."
+
+# c-format
+#: gtk/functions.go:59
+#, c-format
+msgid "%s %s Installing..."
+msgstr "%s %s Установка..."
+
+# c-format
+#: gtk/main.go:336
+#, c-format
+msgid "Game %s has not found."
+msgstr "Игра %s не найдена."
+
+#: gtk/ui/settings.go:114
+msgid "No settings window"
+msgstr "Нет окна настроек"
+
+#: gtk/ui/settings.go:177
+msgid "Settings"
+msgstr "Настройки"
+
+#: gtk/ui/settings.go:288
+msgid "Cancel"
+msgstr "Отменить"
+
+#: gtk/ui/settings.go:344
+msgid "INSTEAD check failed!"
+msgstr "INSTEAD не прошёл проверку!"
+
+#: gtk/ui/settings.go:372
+msgid "Cache has been cleared!"
+msgstr "Кэш очищен!"
