--- a/resources/locale/ru/LC_MESSAGES/insteadman.po
+++ b/resources/locale/ru/LC_MESSAGES/insteadman.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: insteadman 3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-13 13:10+0300\n"
+"POT-Creation-Date: 2018-06-13 18:15+0300\n"
 "PO-Revision-Date: 2018-06-09 19:47+0300\n"
 "Last-Translator:  <jhekasoft@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -218,9 +218,26 @@ msgstr "установлено"
 msgid "restart required"
 msgstr "нужен перезапуск"
 
-#: gtk/ui/settings.go:387
-msgid "Cache has been cleared!"
-msgstr "Кэш очищен!"
+#: gtk/functions.go:74
+#, c-format
+msgid "Game hasn't installed (%s). Please check INSTEAD in the Settings."
+msgstr "Игра не установлена (%s). Пожалуйста, проверьте INSTEAD в Настройках."
+
+#: gtk/ui/settings.go:183
+msgid "Settings"
+msgstr "Настройки"
+
+#: gtk/ui/settings.go:298
+msgid "Choose INSTEAD"
+msgstr "Выберите INSTEAD"
+
+#: gtk/ui/settings.go:299
+msgid "Cancel"
+msgstr "Отменить"
+
+#: gtk/functions.go:25
+msgid "No running. No game selected."
+msgstr "Не удалось запустить игру. Игра не выбрана."
 
 #: gtk/functions.go:40
 msgid "No installing. No game selected."
@@ -231,21 +248,20 @@ msgstr "Не удалось установить. Игра не выбрана."
 msgid "%s Installing..."
 msgstr "%s Установка..."
 
-#: gtk/ui/error.go:23
-msgid "InsteadMan error"
-msgstr "InsteadMan ошибка"
+#: gtk/ui/settings.go:210
+#, c-format
+msgid "Cache directory: %s"
+msgstr "Каталог с кэшем: %s"
 
-#: gtk/ui/settings.go:298
-msgid "Choose INSTEAD"
-msgstr "Выберите INSTEAD"
+#: gtk/ui/settings.go:330
+msgid "INSTEAD has detected!"
+msgstr "INSTEAD найден!"
 
-#: gtk/ui/settings.go:299
-msgid "Open"
-msgstr "Открыть"
-
-#: gtk/ui/settings.go:299
-msgid "Cancel"
-msgstr "Отменить"
+# c-format
+#: gtk/ui/settings.go:363
+#, c-format
+msgid "INSTEAD %s has found!"
+msgstr "INSTEAD %s найден."
 
 # c-format
 #: gtk/functions.go:59
@@ -253,56 +269,45 @@ msgstr "Отменить"
 msgid "%s %s Installing..."
 msgstr "%s %s Установка..."
 
-#: gtk/ui/settings.go:183
-msgid "Settings"
-msgstr "Настройки"
-
-#: gtk/ui/settings.go:357
-msgid "INSTEAD built-in check failed!"
-msgstr "Встроенный INSTEAD не прошёл проверку!"
-
-#: gtk/ui/settings.go:330
-msgid "INSTEAD has detected!"
-msgstr "INSTEAD найден!"
-
-#: gtk/ui/settings.go:333
-msgid "INSTEAD hasn't detected!"
-msgstr "INSTEAD не найден!"
-
-#: gtk/functions.go:20 gtk/functions.go:35 gtk/functions.go:225
-msgid "INSTEAD has not found. Please add INSTEAD in the Settings."
-msgstr "INSTEAD не найден. Пожалуйста настройте INSTEAD в Настройках."
-
-#: gtk/functions.go:25
-msgid "No running. No game selected."
-msgstr "Не удалось запустить игру. Игра не выбрана."
-
-#: gtk/functions.go:74
-#, c-format
-msgid "Game hasn't installed (%s). Please check INSTEAD in the Settings."
-msgstr "Игра не установлена (%s). Пожалуйста, проверьте INSTEAD в Настройках."
-
 # c-format
-#: gtk/main.go:336
+#: gtk/main.go:338
 #, c-format
 msgid "Game %s has not found."
 msgstr "Игра %s не найдена."
 
-#: gtk/main.go:388
+#: gtk/main.go:390
 #, c-format
 msgid "%s Removing..."
 msgstr "%s Удаление..."
-
-#: gtk/ui/settings.go:359
-msgid "INSTEAD check failed!"
-msgstr "INSTEAD не прошёл проверку!"
 
 #: gtk/ui/settings.go:117
 msgid "No settings window"
 msgstr "Нет окна настроек"
 
-# c-format
-#: gtk/ui/settings.go:363
-#, c-format
-msgid "INSTEAD %s has found!"
-msgstr "INSTEAD %s найден."
+#: gtk/ui/settings.go:299
+msgid "Open"
+msgstr "Открыть"
+
+#: gtk/ui/settings.go:333
+msgid "INSTEAD hasn't detected!"
+msgstr "INSTEAD не найден!"
+
+#: gtk/ui/settings.go:357
+msgid "INSTEAD built-in check failed!"
+msgstr "Встроенный INSTEAD не прошёл проверку!"
+
+#: gtk/ui/settings.go:387
+msgid "Cache has been cleared!"
+msgstr "Кэш очищен!"
+
+#: gtk/ui/error.go:23
+msgid "InsteadMan error"
+msgstr "InsteadMan ошибка"
+
+#: gtk/functions.go:20 gtk/functions.go:35 gtk/functions.go:225
+msgid "INSTEAD has not found. Please add INSTEAD in the Settings."
+msgstr "INSTEAD не найден. Пожалуйста настройте INSTEAD в Настройках."
+
+#: gtk/ui/settings.go:359
+msgid "INSTEAD check failed!"
+msgstr "INSTEAD не прошёл проверку!"
