--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 insteadman (3.1.2) focal; urgency=low
 
-  * Initial release (Closes: #9)
+  * Initial package release
 
  -- Anton Karmanov <a.karmanov@inventati.org>  Sun, 15 Nov 2020 21:50:10 +0500
